--- a/angular.json
+++ b/angular.json
@@ -116,7 +116,8 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "BowlingProject:serve"
+            "devServerTarget": "BowlingProject:serve",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
